--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name="Activity1"></activity>
+        <activity android:name="Activity2"></activity>
+        <activity android:name="Activity3"></activity>
     </application>
 
 </manifest>
